# rag-example

./: .env.example  .gitignore  README.md  pyproject.toml  rag-example.code-workspace
src/rag_example/: chunk.py  cli.py  database.py  llm.py  main.py  settings.py  vector.py
