[project]
name = "rag-example"
version = "0.1.0"
description = "A simple vector retrieval RAG system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "flagembedding>=1.3.5",
]

[project.scripts]
rag-example = "rag_example.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
