[project]
name = "rag-example"
version = "0.1.0"
description = "A simple vector retrieval RAG system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.15",
    "docling>=2.43.0",
    "flagembedding>=1.3.5",
    "pydantic-settings>=2.10.1",
    "transformers>=4.54.1",
    "typer>=0.16.0",
]

[project.scripts]
rag-example = "rag_example.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.7",
]

[tool.ruff]
target-version = "py313"
line-length = 128

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
